<resources>
    <string name="app_name">Pet Friends</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="PetListEmpty">It´s looking empty... Add a pet?</string>
    <string name="add_pet">Add pet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="age">Age</string>
    <string name="delete">Delete</string>
    <string name="add_photo">add photo</string>
    <string name="from_camera">Camera</string>
    <string name="from_gallery">Gallery</string>
</resources>